---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 3 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 8bb5532 main add first commit                                   Author Name __ |
 6c08cf7 add second commit                                       Author Name __ |
 79e63f1 add third commit                                        Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Log                    Arguments                                               |
 l     current          -F Search messages (--grep=example)                     |
 o     other            -n Limit number of commits (-n=256)                     |
 L     local branches                                                           |
 b     all branches                                                             |
 a     all refs                                                                 |
 q/esc Quit/Close                                                               |
styles_hash: 95e0fb86331a60b7
